parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> expresion
Rule 2     programa -> programa FIN_EXPR expresion
Rule 3     expresion -> secuencia
Rule 4     expresion -> CONTEXTO secuencia
Rule 5     expresion -> expresion O secuencia
Rule 6     secuencia -> termino
Rule 7     secuencia -> secuencia MAS termino
Rule 8     termino -> token_base
Rule 9     termino -> NEG termino
Rule 10    termino -> termino URGENTE
Rule 11    termino -> LPAREN expresion RPAREN
Rule 12    termino -> LPAREN expresion RPAREN URGENTE
Rule 13    termino -> LPAREN expresion error
Rule 14    termino -> LPAREN RPAREN
Rule 15    token_base -> MMM
Rule 16    token_base -> ATA
Rule 17    token_base -> AAH
Rule 18    token_base -> UUH
Rule 19    token_base -> OH
Rule 20    token_base -> SHH
Rule 21    token_base -> UFF
Rule 22    token_base -> AY
Rule 23    token_base -> ANA
Rule 24    token_base -> BAH
Rule 25    token_base -> PFF
Rule 26    token_base -> SENALA
Rule 27    token_base -> PALMA_ARRIBA
Rule 28    token_base -> PALMA_ABAJO
Rule 29    token_base -> PUNO
Rule 30    token_base -> MANO_ABIERTA
Rule 31    token_base -> TOCA
Rule 32    token_base -> AGITA
Rule 33    token_base -> APUNTA_SI
Rule 34    token_base -> JUNTA_DEDOS
Rule 35    token_base -> SEPARA_MANOS
Rule 36    token_base -> DEDOINDICE_BOCA
Rule 37    token_base -> MUEVE_PULGARES
Rule 38    token_base -> MANO_DERECHA_A_IZQUIERDA
Rule 39    token_base -> MANOS_PALMAS_HACIA_ARRIBA
Rule 40    token_base -> SONIDO_LARGO
Rule 41    token_base -> SONIDO_CORTO
Rule 42    token_base -> SONIDO_REPETIDO
Rule 43    token_base -> SONIDO_AGUDO
Rule 44    token_base -> SONIDO_GRAVE
Rule 45    token_base -> SONIDO_SUAVE
Rule 46    token_base -> SONIDO_RONQUIDO
Rule 47    token_base -> CABEZA_SI
Rule 48    token_base -> CABEZA_NO
Rule 49    token_base -> CABEZA_LADO
Rule 50    token_base -> INCLINA_CUERPO
Rule 51    token_base -> ACERCA_CUERPO
Rule 52    token_base -> ALEJA_CUERPO
Rule 53    token_base -> SENALA_PROPIO
Rule 54    token_base -> SENALA_EXTERNO
Rule 55    token_base -> ENCOGE_HOMBROS
Rule 56    token_base -> LEVANTA_BRAZO
Rule 57    token_base -> CIERRA_OJOS
Rule 58    token_base -> ABRE_OJOS
Rule 59    token_base -> FRUNCE_CENO
Rule 60    token_base -> SONRIE
Rule 61    token_base -> LLANTO
Rule 62    token_base -> BOCA_ABIERTA
Rule 63    token_base -> MIRA_ARRIBA
Rule 64    token_base -> MIRA_ABAJO
Rule 65    token_base -> MIRA_OBJETO
Rule 66    token_base -> PARPADEO_RAPIDO
Rule 67    token_base -> RAPIDO
Rule 68    token_base -> LENTO
Rule 69    token_base -> DOBLE
Rule 70    token_base -> TRIPLE
Rule 71    token_base -> PAUSA
Rule 72    secuencia -> secuencia MAS error

Terminals, with rules where they appear

AAH                  : 17
ABRE_OJOS            : 58
ACERCA_CUERPO        : 51
AGITA                : 32
ALEJA_CUERPO         : 52
ANA                  : 23
APUNTA_SI            : 33
ATA                  : 16
AY                   : 22
BAH                  : 24
BOCA_ABIERTA         : 62
CABEZA_LADO          : 49
CABEZA_NO            : 48
CABEZA_SI            : 47
CIERRA_OJOS          : 57
CONTEXTO             : 4
DEDOINDICE_BOCA      : 36
DOBLE                : 69
ENCOGE_HOMBROS       : 55
FIN_EXPR             : 2
FRUNCE_CENO          : 59
INCLINA_CUERPO       : 50
JUNTA_DEDOS          : 34
LENTO                : 68
LEVANTA_BRAZO        : 56
LLANTO               : 61
LPAREN               : 11 12 13 14
MANOS_PALMAS_HACIA_ARRIBA : 39
MANO_ABIERTA         : 30
MANO_DERECHA_A_IZQUIERDA : 38
MAS                  : 7 72
MIRA_ABAJO           : 64
MIRA_ARRIBA          : 63
MIRA_OBJETO          : 65
MMM                  : 15
MUEVE_PULGARES       : 37
NEG                  : 9
O                    : 5
OH                   : 19
PALMA_ABAJO          : 28
PALMA_ARRIBA         : 27
PARPADEO_RAPIDO      : 66
PAUSA                : 71
PFF                  : 25
PUNO                 : 29
RAPIDO               : 67
RPAREN               : 11 12 14
SENALA               : 26
SENALA_EXTERNO       : 54
SENALA_PROPIO        : 53
SEPARA_MANOS         : 35
SHH                  : 20
SONIDO_AGUDO         : 43
SONIDO_CORTO         : 41
SONIDO_GRAVE         : 44
SONIDO_LARGO         : 40
SONIDO_REPETIDO      : 42
SONIDO_RONQUIDO      : 46
SONIDO_SUAVE         : 45
SONRIE               : 60
TOCA                 : 31
TRIPLE               : 70
UFF                  : 21
URGENTE              : 10 12
UUH                  : 18
error                : 13 72

Nonterminals, with rules where they appear

expresion            : 1 2 5 11 12 13
programa             : 2 0
secuencia            : 3 4 5 7 72
termino              : 6 7 9 10
token_base           : 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . expresion
    (2) programa -> . programa FIN_EXPR expresion
    (3) expresion -> . secuencia
    (4) expresion -> . CONTEXTO secuencia
    (5) expresion -> . expresion O secuencia
    (6) secuencia -> . termino
    (7) secuencia -> . secuencia MAS termino
    (72) secuencia -> . secuencia MAS error
    (8) termino -> . token_base
    (9) termino -> . NEG termino
    (10) termino -> . termino URGENTE
    (11) termino -> . LPAREN expresion RPAREN
    (12) termino -> . LPAREN expresion RPAREN URGENTE
    (13) termino -> . LPAREN expresion error
    (14) termino -> . LPAREN RPAREN
    (15) token_base -> . MMM
    (16) token_base -> . ATA
    (17) token_base -> . AAH
    (18) token_base -> . UUH
    (19) token_base -> . OH
    (20) token_base -> . SHH
    (21) token_base -> . UFF
    (22) token_base -> . AY
    (23) token_base -> . ANA
    (24) token_base -> . BAH
    (25) token_base -> . PFF
    (26) token_base -> . SENALA
    (27) token_base -> . PALMA_ARRIBA
    (28) token_base -> . PALMA_ABAJO
    (29) token_base -> . PUNO
    (30) token_base -> . MANO_ABIERTA
    (31) token_base -> . TOCA
    (32) token_base -> . AGITA
    (33) token_base -> . APUNTA_SI
    (34) token_base -> . JUNTA_DEDOS
    (35) token_base -> . SEPARA_MANOS
    (36) token_base -> . DEDOINDICE_BOCA
    (37) token_base -> . MUEVE_PULGARES
    (38) token_base -> . MANO_DERECHA_A_IZQUIERDA
    (39) token_base -> . MANOS_PALMAS_HACIA_ARRIBA
    (40) token_base -> . SONIDO_LARGO
    (41) token_base -> . SONIDO_CORTO
    (42) token_base -> . SONIDO_REPETIDO
    (43) token_base -> . SONIDO_AGUDO
    (44) token_base -> . SONIDO_GRAVE
    (45) token_base -> . SONIDO_SUAVE
    (46) token_base -> . SONIDO_RONQUIDO
    (47) token_base -> . CABEZA_SI
    (48) token_base -> . CABEZA_NO
    (49) token_base -> . CABEZA_LADO
    (50) token_base -> . INCLINA_CUERPO
    (51) token_base -> . ACERCA_CUERPO
    (52) token_base -> . ALEJA_CUERPO
    (53) token_base -> . SENALA_PROPIO
    (54) token_base -> . SENALA_EXTERNO
    (55) token_base -> . ENCOGE_HOMBROS
    (56) token_base -> . LEVANTA_BRAZO
    (57) token_base -> . CIERRA_OJOS
    (58) token_base -> . ABRE_OJOS
    (59) token_base -> . FRUNCE_CENO
    (60) token_base -> . SONRIE
    (61) token_base -> . LLANTO
    (62) token_base -> . BOCA_ABIERTA
    (63) token_base -> . MIRA_ARRIBA
    (64) token_base -> . MIRA_ABAJO
    (65) token_base -> . MIRA_OBJETO
    (66) token_base -> . PARPADEO_RAPIDO
    (67) token_base -> . RAPIDO
    (68) token_base -> . LENTO
    (69) token_base -> . DOBLE
    (70) token_base -> . TRIPLE
    (71) token_base -> . PAUSA

    CONTEXTO        shift and go to state 4
    NEG             shift and go to state 7
    LPAREN          shift and go to state 8
    MMM             shift and go to state 9
    ATA             shift and go to state 10
    AAH             shift and go to state 11
    UUH             shift and go to state 12
    OH              shift and go to state 13
    SHH             shift and go to state 14
    UFF             shift and go to state 15
    AY              shift and go to state 16
    ANA             shift and go to state 17
    BAH             shift and go to state 18
    PFF             shift and go to state 19
    SENALA          shift and go to state 20
    PALMA_ARRIBA    shift and go to state 21
    PALMA_ABAJO     shift and go to state 22
    PUNO            shift and go to state 23
    MANO_ABIERTA    shift and go to state 24
    TOCA            shift and go to state 25
    AGITA           shift and go to state 26
    APUNTA_SI       shift and go to state 27
    JUNTA_DEDOS     shift and go to state 28
    SEPARA_MANOS    shift and go to state 29
    DEDOINDICE_BOCA shift and go to state 30
    MUEVE_PULGARES  shift and go to state 31
    MANO_DERECHA_A_IZQUIERDA shift and go to state 32
    MANOS_PALMAS_HACIA_ARRIBA shift and go to state 33
    SONIDO_LARGO    shift and go to state 34
    SONIDO_CORTO    shift and go to state 35
    SONIDO_REPETIDO shift and go to state 36
    SONIDO_AGUDO    shift and go to state 37
    SONIDO_GRAVE    shift and go to state 38
    SONIDO_SUAVE    shift and go to state 39
    SONIDO_RONQUIDO shift and go to state 40
    CABEZA_SI       shift and go to state 41
    CABEZA_NO       shift and go to state 42
    CABEZA_LADO     shift and go to state 43
    INCLINA_CUERPO  shift and go to state 44
    ACERCA_CUERPO   shift and go to state 45
    ALEJA_CUERPO    shift and go to state 46
    SENALA_PROPIO   shift and go to state 47
    SENALA_EXTERNO  shift and go to state 48
    ENCOGE_HOMBROS  shift and go to state 49
    LEVANTA_BRAZO   shift and go to state 50
    CIERRA_OJOS     shift and go to state 51
    ABRE_OJOS       shift and go to state 52
    FRUNCE_CENO     shift and go to state 53
    SONRIE          shift and go to state 54
    LLANTO          shift and go to state 55
    BOCA_ABIERTA    shift and go to state 56
    MIRA_ARRIBA     shift and go to state 57
    MIRA_ABAJO      shift and go to state 58
    MIRA_OBJETO     shift and go to state 59
    PARPADEO_RAPIDO shift and go to state 60
    RAPIDO          shift and go to state 61
    LENTO           shift and go to state 62
    DOBLE           shift and go to state 63
    TRIPLE          shift and go to state 64
    PAUSA           shift and go to state 65

    programa                       shift and go to state 1
    expresion                      shift and go to state 2
    secuencia                      shift and go to state 3
    termino                        shift and go to state 5
    token_base                     shift and go to state 6

state 1

    (0) S' -> programa .
    (2) programa -> programa . FIN_EXPR expresion

    FIN_EXPR        shift and go to state 66


state 2

    (1) programa -> expresion .
    (5) expresion -> expresion . O secuencia

    FIN_EXPR        reduce using rule 1 (programa -> expresion .)
    $end            reduce using rule 1 (programa -> expresion .)
    O               shift and go to state 67


state 3

    (3) expresion -> secuencia .
    (7) secuencia -> secuencia . MAS termino
    (72) secuencia -> secuencia . MAS error

    O               reduce using rule 3 (expresion -> secuencia .)
    FIN_EXPR        reduce using rule 3 (expresion -> secuencia .)
    $end            reduce using rule 3 (expresion -> secuencia .)
    RPAREN          reduce using rule 3 (expresion -> secuencia .)
    error           reduce using rule 3 (expresion -> secuencia .)
    MAS             shift and go to state 68


state 4

    (4) expresion -> CONTEXTO . secuencia
    (6) secuencia -> . termino
    (7) secuencia -> . secuencia MAS termino
    (72) secuencia -> . secuencia MAS error
    (8) termino -> . token_base
    (9) termino -> . NEG termino
    (10) termino -> . termino URGENTE
    (11) termino -> . LPAREN expresion RPAREN
    (12) termino -> . LPAREN expresion RPAREN URGENTE
    (13) termino -> . LPAREN expresion error
    (14) termino -> . LPAREN RPAREN
    (15) token_base -> . MMM
    (16) token_base -> . ATA
    (17) token_base -> . AAH
    (18) token_base -> . UUH
    (19) token_base -> . OH
    (20) token_base -> . SHH
    (21) token_base -> . UFF
    (22) token_base -> . AY
    (23) token_base -> . ANA
    (24) token_base -> . BAH
    (25) token_base -> . PFF
    (26) token_base -> . SENALA
    (27) token_base -> . PALMA_ARRIBA
    (28) token_base -> . PALMA_ABAJO
    (29) token_base -> . PUNO
    (30) token_base -> . MANO_ABIERTA
    (31) token_base -> . TOCA
    (32) token_base -> . AGITA
    (33) token_base -> . APUNTA_SI
    (34) token_base -> . JUNTA_DEDOS
    (35) token_base -> . SEPARA_MANOS
    (36) token_base -> . DEDOINDICE_BOCA
    (37) token_base -> . MUEVE_PULGARES
    (38) token_base -> . MANO_DERECHA_A_IZQUIERDA
    (39) token_base -> . MANOS_PALMAS_HACIA_ARRIBA
    (40) token_base -> . SONIDO_LARGO
    (41) token_base -> . SONIDO_CORTO
    (42) token_base -> . SONIDO_REPETIDO
    (43) token_base -> . SONIDO_AGUDO
    (44) token_base -> . SONIDO_GRAVE
    (45) token_base -> . SONIDO_SUAVE
    (46) token_base -> . SONIDO_RONQUIDO
    (47) token_base -> . CABEZA_SI
    (48) token_base -> . CABEZA_NO
    (49) token_base -> . CABEZA_LADO
    (50) token_base -> . INCLINA_CUERPO
    (51) token_base -> . ACERCA_CUERPO
    (52) token_base -> . ALEJA_CUERPO
    (53) token_base -> . SENALA_PROPIO
    (54) token_base -> . SENALA_EXTERNO
    (55) token_base -> . ENCOGE_HOMBROS
    (56) token_base -> . LEVANTA_BRAZO
    (57) token_base -> . CIERRA_OJOS
    (58) token_base -> . ABRE_OJOS
    (59) token_base -> . FRUNCE_CENO
    (60) token_base -> . SONRIE
    (61) token_base -> . LLANTO
    (62) token_base -> . BOCA_ABIERTA
    (63) token_base -> . MIRA_ARRIBA
    (64) token_base -> . MIRA_ABAJO
    (65) token_base -> . MIRA_OBJETO
    (66) token_base -> . PARPADEO_RAPIDO
    (67) token_base -> . RAPIDO
    (68) token_base -> . LENTO
    (69) token_base -> . DOBLE
    (70) token_base -> . TRIPLE
    (71) token_base -> . PAUSA

    NEG             shift and go to state 7
    LPAREN          shift and go to state 8
    MMM             shift and go to state 9
    ATA             shift and go to state 10
    AAH             shift and go to state 11
    UUH             shift and go to state 12
    OH              shift and go to state 13
    SHH             shift and go to state 14
    UFF             shift and go to state 15
    AY              shift and go to state 16
    ANA             shift and go to state 17
    BAH             shift and go to state 18
    PFF             shift and go to state 19
    SENALA          shift and go to state 20
    PALMA_ARRIBA    shift and go to state 21
    PALMA_ABAJO     shift and go to state 22
    PUNO            shift and go to state 23
    MANO_ABIERTA    shift and go to state 24
    TOCA            shift and go to state 25
    AGITA           shift and go to state 26
    APUNTA_SI       shift and go to state 27
    JUNTA_DEDOS     shift and go to state 28
    SEPARA_MANOS    shift and go to state 29
    DEDOINDICE_BOCA shift and go to state 30
    MUEVE_PULGARES  shift and go to state 31
    MANO_DERECHA_A_IZQUIERDA shift and go to state 32
    MANOS_PALMAS_HACIA_ARRIBA shift and go to state 33
    SONIDO_LARGO    shift and go to state 34
    SONIDO_CORTO    shift and go to state 35
    SONIDO_REPETIDO shift and go to state 36
    SONIDO_AGUDO    shift and go to state 37
    SONIDO_GRAVE    shift and go to state 38
    SONIDO_SUAVE    shift and go to state 39
    SONIDO_RONQUIDO shift and go to state 40
    CABEZA_SI       shift and go to state 41
    CABEZA_NO       shift and go to state 42
    CABEZA_LADO     shift and go to state 43
    INCLINA_CUERPO  shift and go to state 44
    ACERCA_CUERPO   shift and go to state 45
    ALEJA_CUERPO    shift and go to state 46
    SENALA_PROPIO   shift and go to state 47
    SENALA_EXTERNO  shift and go to state 48
    ENCOGE_HOMBROS  shift and go to state 49
    LEVANTA_BRAZO   shift and go to state 50
    CIERRA_OJOS     shift and go to state 51
    ABRE_OJOS       shift and go to state 52
    FRUNCE_CENO     shift and go to state 53
    SONRIE          shift and go to state 54
    LLANTO          shift and go to state 55
    BOCA_ABIERTA    shift and go to state 56
    MIRA_ARRIBA     shift and go to state 57
    MIRA_ABAJO      shift and go to state 58
    MIRA_OBJETO     shift and go to state 59
    PARPADEO_RAPIDO shift and go to state 60
    RAPIDO          shift and go to state 61
    LENTO           shift and go to state 62
    DOBLE           shift and go to state 63
    TRIPLE          shift and go to state 64
    PAUSA           shift and go to state 65

    secuencia                      shift and go to state 69
    termino                        shift and go to state 5
    token_base                     shift and go to state 6

state 5

    (6) secuencia -> termino .
    (10) termino -> termino . URGENTE

    MAS             reduce using rule 6 (secuencia -> termino .)
    O               reduce using rule 6 (secuencia -> termino .)
    FIN_EXPR        reduce using rule 6 (secuencia -> termino .)
    $end            reduce using rule 6 (secuencia -> termino .)
    RPAREN          reduce using rule 6 (secuencia -> termino .)
    error           reduce using rule 6 (secuencia -> termino .)
    URGENTE         shift and go to state 70


state 6

    (8) termino -> token_base .

    URGENTE         reduce using rule 8 (termino -> token_base .)
    MAS             reduce using rule 8 (termino -> token_base .)
    O               reduce using rule 8 (termino -> token_base .)
    FIN_EXPR        reduce using rule 8 (termino -> token_base .)
    $end            reduce using rule 8 (termino -> token_base .)
    RPAREN          reduce using rule 8 (termino -> token_base .)
    error           reduce using rule 8 (termino -> token_base .)


state 7

    (9) termino -> NEG . termino
    (8) termino -> . token_base
    (9) termino -> . NEG termino
    (10) termino -> . termino URGENTE
    (11) termino -> . LPAREN expresion RPAREN
    (12) termino -> . LPAREN expresion RPAREN URGENTE
    (13) termino -> . LPAREN expresion error
    (14) termino -> . LPAREN RPAREN
    (15) token_base -> . MMM
    (16) token_base -> . ATA
    (17) token_base -> . AAH
    (18) token_base -> . UUH
    (19) token_base -> . OH
    (20) token_base -> . SHH
    (21) token_base -> . UFF
    (22) token_base -> . AY
    (23) token_base -> . ANA
    (24) token_base -> . BAH
    (25) token_base -> . PFF
    (26) token_base -> . SENALA
    (27) token_base -> . PALMA_ARRIBA
    (28) token_base -> . PALMA_ABAJO
    (29) token_base -> . PUNO
    (30) token_base -> . MANO_ABIERTA
    (31) token_base -> . TOCA
    (32) token_base -> . AGITA
    (33) token_base -> . APUNTA_SI
    (34) token_base -> . JUNTA_DEDOS
    (35) token_base -> . SEPARA_MANOS
    (36) token_base -> . DEDOINDICE_BOCA
    (37) token_base -> . MUEVE_PULGARES
    (38) token_base -> . MANO_DERECHA_A_IZQUIERDA
    (39) token_base -> . MANOS_PALMAS_HACIA_ARRIBA
    (40) token_base -> . SONIDO_LARGO
    (41) token_base -> . SONIDO_CORTO
    (42) token_base -> . SONIDO_REPETIDO
    (43) token_base -> . SONIDO_AGUDO
    (44) token_base -> . SONIDO_GRAVE
    (45) token_base -> . SONIDO_SUAVE
    (46) token_base -> . SONIDO_RONQUIDO
    (47) token_base -> . CABEZA_SI
    (48) token_base -> . CABEZA_NO
    (49) token_base -> . CABEZA_LADO
    (50) token_base -> . INCLINA_CUERPO
    (51) token_base -> . ACERCA_CUERPO
    (52) token_base -> . ALEJA_CUERPO
    (53) token_base -> . SENALA_PROPIO
    (54) token_base -> . SENALA_EXTERNO
    (55) token_base -> . ENCOGE_HOMBROS
    (56) token_base -> . LEVANTA_BRAZO
    (57) token_base -> . CIERRA_OJOS
    (58) token_base -> . ABRE_OJOS
    (59) token_base -> . FRUNCE_CENO
    (60) token_base -> . SONRIE
    (61) token_base -> . LLANTO
    (62) token_base -> . BOCA_ABIERTA
    (63) token_base -> . MIRA_ARRIBA
    (64) token_base -> . MIRA_ABAJO
    (65) token_base -> . MIRA_OBJETO
    (66) token_base -> . PARPADEO_RAPIDO
    (67) token_base -> . RAPIDO
    (68) token_base -> . LENTO
    (69) token_base -> . DOBLE
    (70) token_base -> . TRIPLE
    (71) token_base -> . PAUSA

    NEG             shift and go to state 7
    LPAREN          shift and go to state 8
    MMM             shift and go to state 9
    ATA             shift and go to state 10
    AAH             shift and go to state 11
    UUH             shift and go to state 12
    OH              shift and go to state 13
    SHH             shift and go to state 14
    UFF             shift and go to state 15
    AY              shift and go to state 16
    ANA             shift and go to state 17
    BAH             shift and go to state 18
    PFF             shift and go to state 19
    SENALA          shift and go to state 20
    PALMA_ARRIBA    shift and go to state 21
    PALMA_ABAJO     shift and go to state 22
    PUNO            shift and go to state 23
    MANO_ABIERTA    shift and go to state 24
    TOCA            shift and go to state 25
    AGITA           shift and go to state 26
    APUNTA_SI       shift and go to state 27
    JUNTA_DEDOS     shift and go to state 28
    SEPARA_MANOS    shift and go to state 29
    DEDOINDICE_BOCA shift and go to state 30
    MUEVE_PULGARES  shift and go to state 31
    MANO_DERECHA_A_IZQUIERDA shift and go to state 32
    MANOS_PALMAS_HACIA_ARRIBA shift and go to state 33
    SONIDO_LARGO    shift and go to state 34
    SONIDO_CORTO    shift and go to state 35
    SONIDO_REPETIDO shift and go to state 36
    SONIDO_AGUDO    shift and go to state 37
    SONIDO_GRAVE    shift and go to state 38
    SONIDO_SUAVE    shift and go to state 39
    SONIDO_RONQUIDO shift and go to state 40
    CABEZA_SI       shift and go to state 41
    CABEZA_NO       shift and go to state 42
    CABEZA_LADO     shift and go to state 43
    INCLINA_CUERPO  shift and go to state 44
    ACERCA_CUERPO   shift and go to state 45
    ALEJA_CUERPO    shift and go to state 46
    SENALA_PROPIO   shift and go to state 47
    SENALA_EXTERNO  shift and go to state 48
    ENCOGE_HOMBROS  shift and go to state 49
    LEVANTA_BRAZO   shift and go to state 50
    CIERRA_OJOS     shift and go to state 51
    ABRE_OJOS       shift and go to state 52
    FRUNCE_CENO     shift and go to state 53
    SONRIE          shift and go to state 54
    LLANTO          shift and go to state 55
    BOCA_ABIERTA    shift and go to state 56
    MIRA_ARRIBA     shift and go to state 57
    MIRA_ABAJO      shift and go to state 58
    MIRA_OBJETO     shift and go to state 59
    PARPADEO_RAPIDO shift and go to state 60
    RAPIDO          shift and go to state 61
    LENTO           shift and go to state 62
    DOBLE           shift and go to state 63
    TRIPLE          shift and go to state 64
    PAUSA           shift and go to state 65

    termino                        shift and go to state 71
    token_base                     shift and go to state 6

state 8
